[package]
name = "child_wrangler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.5", features = ["nightly", "rustls", "tracing"] }
leptos_router = { version = "0.8.5", features = ["nightly"] }
axum = { version = "0.8.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.5", optional = true }
leptos_meta = { version = "0.8.5" }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { version = "=0.2.104", optional = true }
web-sys = {version = "0.3.77", features=["DataTransfer", "HtmlDialogElement", "Window", "SaveFilePickerOptions", "FileSystem", "FileSystemFileHandle", "FileSystemWritableFileStream"]}
chrono = {version = "0.4.42", features=["serde"]}
uuid = {version = "1.18.1", features=["serde", "v4", "js"]}
serde = "1.0.219"
sqlx = {version = "0.8.6", features=["postgres", "uuid", "chrono", "runtime-tokio"], optional = true}
config = "0.15.15"
serde_json = "1.0.145"
dto = {path = "../dto"}
log = "0.4.28"
env_logger = "0.11.8"
csv = {version = "1.3.1", optional = true}
wasm-bindgen-futures = "0.4.54"
axum-server = {version = "0.7.2", features = ["tls-rustls", "rustls-pemfile"], optional = true}

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
	"dep:axum-server",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
	"sqlx",
    "leptos_meta/ssr",
    "leptos_router/ssr",
	"csv"
]

# Defines a size-optimized profile for the WASM bundle in release mode
[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "child-wrangler"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

