[package]
name = "message_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.41", features=["serde"]}
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.27"
regex = "1.11.1"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "runtime-tokio", "chrono"] }
tokio = {version = "1.47.1", features=["full"]}
uuid = {version = "1.18.0", features= ["serde", "v4"]}
dto = {path = "../dto"}
