
[package]
name = "modem_connector"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
log = "0.4.28"
serde = "1.0.228"
simple_logger = "5.1.0"
sqlx = {version = "0.8.6", features=["postgres", "uuid", "chrono", "runtime-tokio"]}
tokio = {version = "1.48.0", features=["macros", "rt-multi-thread" ]}
zbus = "5.12.0"
dto = {path = "../dto"}
uuid = "1.18.1"
chrono = "0.4.42"
